fix: Layout in older browsers
- variable with dvh needs to be in @support rule
- overflow: scroll shows horiz scrollbars on some systems
- viewer was shorter than necessary
- TODO: fix responsive for browers without :has

--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .Message {
